--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@prisma/client": "^4.1.1",
     "@remix-run/node": "^1.6.7",
     "@remix-run/react": "^1.6.7",
     "@remix-run/serve": "^1.6.7",
@@ -20,6 +21,7 @@
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
     "eslint": "^8.20.0",
+    "prisma": "^4.1.1",
     "typescript": "^4.7.4"
   },
   "engines": {
