--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
+    "build": "npm run build:css && remix build",
+    "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
+    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
+    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "deploy": "fly deploy --remote-only",
-    "dev": "remix dev",
     "start": "remix-serve build"
   },
   "dependencies": {
@@ -20,8 +22,12 @@
     "@remix-run/eslint-config": "^1.6.7",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
+    "autoprefixer": "^10.4.8",
+    "concurrently": "^7.3.0",
     "eslint": "^8.20.0",
+    "postcss": "^8.4.14",
     "prisma": "^4.1.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4"
   },
   "engines": {
