--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@remix-run/node": "^1.6.7",
     "@remix-run/react": "^1.6.7",
     "@remix-run/serve": "^1.6.7",
+    "dayjs": "^1.11.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
