--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@remix-run/serve": "^1.6.7",
     "dayjs": "^1.11.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "recharts": "^2.1.13"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.6.7",
