--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/react": "^1.6.7",
     "@remix-run/serve": "^1.6.7",
     "dayjs": "^1.11.4",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^18.2.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@remix-run/dev": "^1.6.7",
     "@remix-run/eslint-config": "^1.6.7",
+    "@types/lodash": "^4.14.184",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
     "autoprefixer": "^10.4.8",
