--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^18.2.0",
-    "recharts": "^2.1.13"
+    "recharts": "^2.1.13",
+    "tiny-invariant": "^1.2.0",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.6.7",
